[package]
name = "nvbind"
version = "0.1.0"
edition = "2024"
description = "A lightweight, Rust-based alternative to NVIDIA Container Toolkit"
license = "MIT"
repository = "https://github.com/ghostkellz/nvbind"
authors = ["ghostkellz"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
nix = "0.27"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gpu_discovery"
harness = false

[[bench]]
name = "config_performance"
harness = false
