[package]
name = "nvbind"
version = "0.1.0"
edition = "2024"
description = "A lightweight, Rust-based alternative to NVIDIA Container Toolkit"
license = "MIT"
repository = "https://github.com/ghostkellz/nvbind"
authors = ["ghostkellz"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
nix = { version = "0.27", features = ["user"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hostname = "0.3"
which = "4.4"
libc = "0.2"

# Bolt integration dependencies (optional)
async-trait = { version = "0.1", optional = true }

[features]
default = []
bolt = ["async-trait"]

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gpu_discovery"
harness = false

[[bench]]
name = "config_performance"
harness = false
