[package]
name = "nvbind"
version = "0.1.0"
edition = "2024"
description = "High-performance NVIDIA container GPU runtime engineered in Rust"
license = "MIT"
repository = "https://github.com/ghostkellz/nvbind"
authors = ["ghostkellz"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
nix = { version = "0.27", features = ["user"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hostname = "0.3"
which = "4.4"
libc = "0.2"

# Bolt integration dependencies (always available for plugin architecture)
async-trait = "0.1"

# Additional dependencies for new modules
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.14"

# CLI enhancement dependencies
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
prettytable-rs = "0.10"
serde_yaml = "0.9"

[features]
default = []
bolt = []

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

[[bench]]
name = "gpu_discovery"
harness = false

[[bench]]
name = "config_performance"
harness = false

[[bench]]
name = "bolt_integration"
harness = false
required-features = ["bolt"]

[[bench]]
name = "gpu_passthrough_latency"
harness = false
